# tinyxml2-rs

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  fuzz.yml  publish.yml
crates/tinyxml2/: Cargo.toml
crates/tinyxml2-bench/: Cargo.toml  build.rs
crates/tinyxml2-bench/benches/: comparison_bench.rs  dom.rs  parse.rs  parse_bench.rs  print_bench.rs  serialize.rs  traverse_bench.rs
crates/tinyxml2-bench/src/: cpp_wrapper.cpp  lib.rs
crates/tinyxml2-capi/: Cargo.toml  build.rs  cbindgen.toml
crates/tinyxml2-capi/examples/: basic.c  create.c
crates/tinyxml2-capi/include/: tinyxml2.h
crates/tinyxml2-capi/src/: lib.rs  types.rs
crates/tinyxml2-capi/tests/: ffi_tests.rs
crates/tinyxml2-cpp-helper/: Cargo.toml  build.rs
crates/tinyxml2-cpp-helper/src/: main.cpp  main.rs
crates/tinyxml2/src/: arena.rs  document.rs  entity.rs  error.rs  handle.rs  iter.rs  lib.rs  node.rs  parser.rs  printer.rs  refs.rs  typed.rs  util.rs  visitor.rs
crates/tinyxml2/tests/: dom_tests.rs  handle_tests.rs  iter_tests.rs  parser_tests.rs  printer_tests.rs  ref_tests.rs  roundtrip_tests.rs
docs/architecture/: dom.md  ffi.md  memory-model.md  overview.md  parser.md
docs/compatibility/: api-matrix.md  behavior.md  migration.md
docs/decisions/: 0001-project-goals.md  0002-memory-model.md  0003-parser.md
docs/design/: entities.md  errors.md  parser.md  serializer.md
docs/roadmap/: phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md
examples/: build_dom.rs  c_interop.rs  parse_file.rs  streaming_writer.rs  visitor.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_fuzz.rs  roundtrip_fuzz.rs  serialize_fuzz.rs  streaming_fuzz.rs
scripts/: generate_corpus.rs
spec/: behavior.md  compatibility.md  tinyxml2-api.md  xml-standard.md
tests/compat/: cpp_runner.rs  harness.proptest-regressions  harness.rs
tests/corpus/invalid/: attr_01.xml  attr_02.xml  attr_03.xml  attr_04.xml  attr_05.xml  attr_06.xml  char_02.xml  char_04.xml  char_05.xml  depth_1000.xml  depth_101.xml  depth_200.xml  entity_01.xml  entity_02.xml  entity_03.xml  entity_04.xml  entity_05.xml  entity_06.xml  mismatched_01.xml  mismatched_02.xml  mismatched_03.xml  mismatched_04.xml  mismatched_05.xml  unclosed_02.xml  unclosed_03.xml  unclosed_04.xml  unclosed_06.xml
tests/corpus/unicode/: bmp_01.xml  bmp_02.xml  bmp_03.xml  bmp_04.xml  cjk_01.xml  cjk_02.xml  cjk_03.xml  cjk_04.xml  combining_01.xml  combining_02.xml  combining_03.xml  combining_04.xml  emoji_01.xml  emoji_02.xml  emoji_03.xml  emoji_04.xml  rtl_01.xml  rtl_02.xml  rtl_03.xml  rtl_04.xml
tests/corpus/valid/: attr_01.xml  attr_02.xml  attr_03.xml  attr_04.xml  attr_05.xml  attr_06.xml  attr_07.xml  attr_08.xml  attr_09.xml  attr_10.xml  basic_05.xml  basic_06.xml  basic_09.xml  basic_10.xml  cdata_01.xml  cdata_02.xml  cdata_03.xml  cdata_04.xml  cdata_05.xml  cdata_06.xml  comment_01.xml  comment_02.xml  comment_03.xml  comment_04.xml  decl_01.xml  decl_03.xml  decl_04.xml  deep_10.xml  deep_100.xml  deep_50.xml  deep_99.xml  large_100k.xml  text_01.xml  text_02.xml  text_03.xml  text_04.xml  text_05.xml  text_06.xml  text_07.xml  text_08.xml  (+3 more)
