[package]
name = "tinyxml2-bench"
description = "Benchmark suite for tinyxml2-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
tinyxml2 = { path = "../tinyxml2", version = "0.1.13" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "dom"
harness = false

[lints]
workspace = true
