[package]
name = "tinyxml2-bench"
description = "Benchmark suite for tinyxml2-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

keywords = ["xml", "tinyxml2", "parser", "dom", "ffi"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/tinyxml2-bench"
readme = "../../README.md"

[dependencies]
tinyxml2 = { path = "../tinyxml2", version = "1.0.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "print_bench"
harness = false

[[bench]]
name = "traverse_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
