[package]
name = "tinyxml2"
description = "A ground-up Rust implementation of the TinyXML2 API — behavioral compatibility, idiomatic internals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["xml", "tinyxml2", "parser", "dom", "ffi"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/tinyxml2"
readme = "../../README.md"

[dependencies]

[dev-dependencies]
proptest = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
tinyxml2-capi = { path = "../tinyxml2-capi" }

[[example]]
name = "parse_file"
path = "../../examples/parse_file.rs"

[[example]]
name = "build_dom"
path = "../../examples/build_dom.rs"

[[example]]
name = "visitor"
path = "../../examples/visitor.rs"

[[example]]
name = "streaming_writer"
path = "../../examples/streaming_writer.rs"

[[test]]
name = "compat"
path = "../../tests/compat/harness.rs"

[lints]
workspace = true
